--- a/sandiegoHoteis2025/sandiego-home-pack/assets/css/sandiego.css
+++ b/sandiegoHoteis2025/sandiego-home-pack/assets/css/sandiego.css
@@ -1,5 +1,4 @@
-/* San Diego - minimal styles for sections (Bootstrap friendly) */
-:root {
+/* :root {
   --cor-teal    : #0d5963;
   --cor-teal-700: #0b4951;
   --cor-gray    : #566370;
@@ -138,4 +137,4 @@
 
 .copy-list .copied {
   opacity: .75
-}
+} */
