--- a/sandiegoHoteis2025/style.css
+++ b/sandiegoHoteis2025/style.css
@@ -5,7 +5,8 @@ Author: Gamberine Comunicação Digital
 Ano: 2025
 Theme URI: https://www.gamberine.com.br
 Author URI: https://www.gamberine.com.br
-Description: Tema Base Gamberine, desenvolvido para o Hotel San Diego em 2025.
+Template: tema-base-gamb
+Description: Tema filho para o site San Diego Hoteis 2025
 Version: 1.0.0
 */
 @import url('style-variaveis.css');
