--- a/tema-base-gamb/style.css
+++ b/tema-base-gamb/style.css
@@ -1,6 +1,6 @@
 /*
 Theme Name: tema-base-gamb
 Author: Gamberine
-Version: 1.0.0
-Description: Tema base mínimo para rodar o tema filho San Diego Hotéis.
+Version: 1.0
+Description: Tema base vazio para o San Diego Hoteis
 */
