--- a/tema-gepeto/style.css
+++ b/tema-gepeto/style.css
@@ -1,14 +1,14 @@
 /*
-Theme Name: San Diego Hoteis 2025
-Theme URI: https://example.com
+Theme Name: GEpeto - SD 2025
+Theme URI: https://gamberine.com.br/tema-gepeto-sd-2025
 Author: Gamberine
-Author URI: https://example.com
-Description: Tema filho para o site San Diego Hotéis 2025
+Author URI: https://gamberine.com
+Description: Tema filho para o site GEpeto - SD 2025
 Version: 1.0
 Template: tema-base-gamb
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: san-diego-hoteis-2025
+Text Domain: ge-peto-sd-2025
 */
 
 /*
