--- a/tema-gepeto/assets/css/style-base.css
+++ b/tema-gepeto/assets/css/style-base.css
@@ -3,7 +3,7 @@
 Theme Name: San Diego Hoteis 2025
 Theme URI: https://www.gamberine.com.br
 Author URI: https://www.gamberine.com.br
-Description: Tema filho do Tema Base Gamberine, desenvolvido para o Hotel San Diego em 2025.
+Description: Base Gamberine, desenvolvido para o Hotel San Diego em 2025.
 Version: 1.0.0
 Template: tema-base-gamb
 Text Domain: sandiegoHoteis2025
