--- a/tema-sandiegoHoteis2025/style.css
+++ b/tema-sandiegoHoteis2025/style.css
@@ -1,11 +1,11 @@
 @charset "UTF-8";
 /*
-Theme Name: Sandiego Hoteis 2025
+Theme Name: DESCARTAR - BIBLIOTECA
 Author: Gamberine Comunicação Digital
 Ano: 2025
 Theme URI: https://www.gamberine.com.br
 Author URI: https://www.gamberine.com.br
-Description: Tema filho para o site San Diego Hoteis 2025
+Description: Tema DESCARTE
 Version: 1.0.0
 */
 
