--- a/tema-gepeto/style.css
+++ b/tema-gepeto/style.css
@@ -3,7 +3,7 @@ Theme Name: GEpeto - SD 2025
 Theme URI: https://gamberine.com.br/tema-gepeto-sd-2025
 Author: Gamberine
 Author URI: https://gamberine.com
-Description: Tema filho para o site GEpeto - SD 2025
+Description: Tema para o site GEpeto - SD 2025
 Version: 1.0
 License: GNU General Public License v2 or later
 License URI: https://www.gnu.org/licenses/gpl-2.0.html
@@ -11,7 +11,7 @@ Text Domain: ge-peto-sd-2025
 */
 
 /*
- * Este arquivo de estilo contém apenas o cabeçalho do tema filho. O restante
+ * Este arquivo de estilo contém apenas o cabeçalho do tema. O restante
  * dos estilos está localizado em /assets/css/. O WordPress utiliza este
  * cabeçalho para reconhecer o tema e associá-lo ao tema pai 'tema-base-gamb'.
  */
