--- a/wOBSOLETO/style.css
+++ b/wOBSOLETO/style.css
@@ -186,7 +186,7 @@ Version: 1.0.0
   opacity           : .85;
   margin-inline     : auto;
 }
-
+/* 
 .site-footer {
   background: var(--secondary-color-hover);
   padding   : 4rem 0;
@@ -400,7 +400,7 @@ Version: 1.0.0
   font-size  : 2.8rem !important;
   white-space: break-spaces;
   text-align : center;
-}
+} */
 
 span.font-decorative {
   width          : 100%;
